<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Suvermemo</string>
    <string name="action_task">Task</string>
    <string name="hello_world">Hello Su Yuxin</string>
    <string name="title_activity_notebook_list">NotebookListActivity</string>
    <string name="text_empty_notebook_list">No Notebook to Display</string>
    <string name="text_notebook_sync">Sync</string>
    <string name="text_notebook_in_sync">Sync…</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="text_load">Loading</string>
    <string name="error_list_notebooks">Error in listing notebooks!</string>
    <string name="error_create_notestore">Error in creating note store!</string>
    <string name="esdk__evernote">Evernote</string>
    <string name="esdk__evernote_login_failed">Evernote Login Failed</string>
    <string name="esdk__evernote_login_successful">Evernote login successful</string>
    <string name="esdk__err_protocol_version">Incomatible EDAM client protocol version</string>
    <string name="esdk__err_authentication">Error authenticating to Evernote</string>
    <string name="esdk__err_api_setup">Error intializing Evernote API</string>
    <string name="esdk__loading">Loading</string>
    <string name="error_download_note">Error in downloading note!</string>
    <string name="text_download_note_finished">All notes have been updated successfully!</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_notebook_enter">Enter</string>
    <string name="text_button_note_next">To Next Note</string>
    <string name="label_evaluate_note">Evaluate This Note:</string>
    <string name="titile_evaluation_statistics">Evaluation and Statistics</string>
    <string name="text_need_sync_again">Notes have not been downloaded completely! Please press Sync again.</string>
    <string name="text_wait_for_download">Please wait for downloading patiently!</string>
    <string name="text_sync_sound_file">Download pronunciation files</string>
    <string name="text_urgent">急</string>
    <string name="text_important">重</string>
    <string name="text_unimportant">轻</string>
    <string name="text_not_urgent">缓</string>
    <string name="text_daily">恒</string>
    <string name="text_update_task">Update Tasks</string>
    <string name="info_need_create_task_notebook">请先创建任务列表笔记本</string>
    <string name="text_update_local_notebook">Update Local Notebooks</string>

</resources>