<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal|top">
        <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_important"
                android:id="@+id/textView_important"
                android:layout_weight="1" android:layout_gravity="center_horizontal"
                android:gravity="center" android:background="@android:color/holo_green_light"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_unimportant"
                android:id="@+id/textView_unimportant" android:layout_gravity="right|top" android:layout_weight="1"
                android:gravity="center" android:background="@android:color/holo_green_light"/>
    </LinearLayout>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_gravity="center">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_urgent"
                    android:id="@+id/textView_urgent" android:layout_gravity="center_vertical"
                    android:background="@android:color/holo_green_light"/>
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_important_urgent" android:layout_weight="1"
                    android:background="@android:color/holo_red_light"/>
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_unimportant_urgent" android:layout_weight="1"
                    android:background="@android:color/holo_purple"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_not_urgent"
                    android:id="@+id/textView_note_urgent" android:layout_gravity="center_vertical"
                    android:background="@android:color/holo_green_light"/>
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_important_not_urgent" android:layout_weight="1"
                    android:background="@android:color/darker_gray"/>
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_unimportant_not_urgent" android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"/>
        </TableRow>
        <TableRow
                android:layout_weight="1.5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_daily"
                    android:id="@+id/textView_daily" android:layout_gravity="center_vertical"
                    android:background="@android:color/holo_green_light"/>
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_daily" android:background="@android:color/holo_orange_dark"/>

        </TableRow>

    </TableLayout>
</LinearLayout>